--- a/src/styles/default/_mixins.scss
+++ b/src/styles/default/_mixins.scss
@@ -110,6 +110,12 @@
     color: var(--tertiary);
     font-size: var(--fs-lg);
 
+    width: 100%; /* Imposta una larghezza */
+    white-space: nowrap; /* Impedisce la divisione del testo in più righe */
+
+    text-overflow: ellipsis; /* Applica l'ellissi (...) al testo che eccede */
+    text-align: left;
+
     @media (min-width: 767px) {
       font-size: (var(--fs-lg));
       // display: block;
