feat: add error handling on PasswordRecovery component and fix some style issues

--- a/src/pages/forgot-password/forgotPassword.module.scss
+++ b/src/pages/forgot-password/forgotPassword.module.scss
@@ -3,41 +3,51 @@
   @include flex-column(var(--gap-md));
   @include flex-center;
 
+  @media (min-width: 767px) {
+    justify-content: center;
+  }
+
   .mainContent {
     @include form;
     padding: var(--page-padding);
     @include flex-center;
     background-color: var(--elements-bg);
     border-radius: var(--border-radius);
+    width: 350px;
   }
 
   h1 {
     font-size: var(--fs-md);
     font-weight: var(--fw-bold);
-    color: var(--white);
+    color: var(--tertiary);
   }
 
   form {
     @include flex-column(20px);
   }
+
+  p {
+    color: var(--white);
+    text-align: center;
+    font-size: var(--fs-sm);
+  }
 }
 
 .login {
-  color: var(--white);
+  color: var(--light);
 }
 
 .login:hover {
-  color: var(--accent);
+  color: var(--tertiary);
 }
 
 .messageContainer {
-  @include base-element;
+  // @include base-element;
+  padding: var(--elements-padding);
+  border-radius: var(--border-radius);
+  background-color: var(--dark);
 }
 
-.message {
-  color: green;
-}
-
-.error {
-  color: red;
+.errorContainer {
+  border: 2px solid var(--error); /* Bordo rosso */
 }
