--- a/src/pages/storic-profile/storic-profile.module.scss
+++ b/src/pages/storic-profile/storic-profile.module.scss
@@ -12,7 +12,7 @@
     padding: 0;
     @media (min-width: 767px) {
       // padding-top: 60px;
-      padding-bottom: 100px;
+      padding-bottom: 62px;
       align-items: center;
     }
     @media (min-width: 1025px) {
@@ -28,8 +28,8 @@
         color: var(--tertiary);
         font-weight: var(--fw-bold);
       }
-      @media (min-width: 1024px) {
-        padding: 0 62px;
+      @media (min-width: 767px) {
+        // padding: 0 62px;
       }
     }
 
