feat: add different filtered menu for sidebar or navbar

--- a/src/components/Molecules/NavBar/NavBar.module.scss
+++ b/src/components/Molecules/NavBar/NavBar.module.scss
@@ -87,7 +87,7 @@
     .menuList,
     .footerList {
       @include flex-column(var(--gap-md));
-      font-size: var(--fs-md);
+      font-size: var(--fs-smd);
 
       & > li:hover {
         font-weight: var(--fw-bold);
