--- a/src/components/Molecules/Features/Features.module.scss
+++ b/src/components/Molecules/Features/Features.module.scss
@@ -21,6 +21,7 @@
 
       h2 {
         font-size: calc(var(--fs-lg) * 1.3);
+        color: var(--tertiary);
 
         .bold {
           color: var(--primary);
