--- a/src/components/Molecules/HowTo/HowTo.module.scss
+++ b/src/components/Molecules/HowTo/HowTo.module.scss
@@ -28,6 +28,7 @@
 
       h2 {
         font-size: calc(var(--fs-lg) * 1.3);
+        color: var(--tertiary);
       }
     }
 
@@ -46,6 +47,7 @@
       .stepCard {
         background-color: var(--accent);
         border-radius: var(--border-radius);
+        border: 3px solid var(--tertiary);
         padding: var(--page-padding);
         display: flex;
         flex-direction: column;
@@ -64,11 +66,11 @@
         }
 
         .stepImg {
-          background-color: var(--dark);
+          background: var(--tertiary-gradient);
           align-self: center;
           border-radius: 50%;
           overflow: hidden;
-          border: 4px solid var(--tertiary);
+          // border: 4px solid var(--tertiary);
 
           img {
             width: 60%;
