--- a/src/components/Organism/ResultsList/ResultsList.module.scss
+++ b/src/components/Organism/ResultsList/ResultsList.module.scss
@@ -1,3 +1,16 @@
+.containerResultList {
+  @include flex-column(var(--gap-md));
+  padding: 0;
+  @media (min-width: 767px) {
+    // padding-top: 60px;
+    padding-bottom: 62px;
+    align-items: center;
+  }
+  @media (min-width: 1025px) {
+    padding-top: 60px;
+  }
+}
+
 .header {
   @include header;
   align-items: flex-end;
@@ -6,6 +19,15 @@
   h2 {
     color: var(--light);
     margin-bottom: var(--gap-sm);
+    font-size: var(--fs-xl);
+  }
+
+  h3 {
+    color: var(--tertiary);
+    span {
+      color: var(--light);
+      font-size: var(--fs-md);
+    }
   }
 
   p {
@@ -21,6 +43,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    position: relative;
 
     width: 140px;
     height: 140px;
@@ -28,6 +51,15 @@
     background-color: var(--accent);
     border-radius: 50%;
     border: 5px solid var(--tertiary);
+
+    span {
+      position: absolute;
+      color: var(--white);
+      bottom: -14px;
+      background: var(--tertiary-gradient);
+      padding: 4px 12px;
+      border-radius: var(--border-radius);
+    }
 
     @media (min-width: 767px) {
       margin: 0;
@@ -46,14 +78,21 @@
   }
 
   .feedbackSection {
-    text-align: center;
+    // text-align: center;
     color: var(--light);
 
     @media (min-width: 767px) {
       text-align: start;
 
       p {
-        max-width: 50ch;
+        max-width: 52ch;
+      }
+    }
+    @media (min-width: 1024px) {
+      text-align: start;
+
+      p {
+        max-width: 60ch;
       }
     }
 
@@ -66,6 +105,7 @@
 .resultsList {
   @include flex-column(var(--gap-md));
   @media (min-width: 767px) {
-    width: 50%;
+    width: 64%;
+    margin: 0 auto;
   }
 }
