--- a/src/components/Organism/QuestionCard/questionCard.module.scss
+++ b/src/components/Organism/QuestionCard/questionCard.module.scss
@@ -32,6 +32,7 @@
         margin-bottom: 0;
       }
       h3 {
+        font-size: var(--fs-lg);
         color: var(--light);
         text-align: center;
       }
