--- a/src/styles/default/_mixins.scss
+++ b/src/styles/default/_mixins.scss
@@ -68,7 +68,7 @@
   }
   .container {
     padding: var(--page-padding);
-    min-height: 100dvh;
+    min-height: 100vh;
 
     @include flex-column(var(--gap-lg));
 
