style: fix viewport mobile height 4

--- a/src/pages/forgot-password/forgotPassword.module.scss
+++ b/src/pages/forgot-password/forgotPassword.module.scss
@@ -17,7 +17,7 @@
   }
 
   h1 {
-    font-size: var(--fs-md);
+    font-size: var(--fs-xl);
     font-weight: var(--fw-bold);
     color: var(--tertiary);
   }
