--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -45,8 +45,8 @@
   --elements-bg: rgba(211, 211, 211, 0.2);
   --cards-bg: linear-gradient(45deg, rgba(68, 75, 136, 1) 50%, rgba(82, 90, 163, 1) 78%, rgba(106, 113, 180, 1) 100%);
 
-  --correct-bg: rgb(16, 152, 32, 0.3);
-  --average-bg: rgb(229, 159, 79);
+  --correct-bg: rgb(16, 152, 32, 0.25);
+  --average-bg: rgba(255, 209, 4, 0.7);
   --incorrect-bg: rgb(192, 30, 97, 0.7);
   --lightGrey: rgb(211, 211, 211); //hr
 
