fix: minor fixes on ChooseInterviewer and docs images

--- a/src/components/Organism/ChooseInterviewer/ChooseInterviewer.module.scss
+++ b/src/components/Organism/ChooseInterviewer/ChooseInterviewer.module.scss
@@ -22,6 +22,11 @@
 
     .header {
       @include header;
+
+      .sectionTitle {
+        font-size: var(--fs-lg);
+        padding-bottom: 12px;
+      }
     }
 
     .interviewerForm {
